<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">DzBac</string>
	<string name="host">178.62.57.167</string>
	<string name="port">3000</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">768513439884976</string>
	<string name="new_comments">%1$d nouveau(x) commentaire(s)</string>
	<string name="rester_appuyer">Rester appuyer sur le microphone pour enregistrer !</string>
	<string name="message_vocal">Voulez-vous envoyez le message vocal ?</string>
	<string name="voice_msg_input_hint_speaking">Parlez ...</string>
	<string name="voice_msg_input_hint_time_limited_formatter" formatted="false">%d s left</string>
	<string name="favoris">Favoris</string>
	<string name="photo_preview_video">Ajoute une photo de présentation pour ta vidéo</string>
	<string name="mes_abonnements">Mes abonnements</string>
	<string name="recorder_state_recording">Enregistrement&#8230;</string>
	<string name="recorder_state_min_recorded">Vidéo minimale enregistrée.</string>
	<string name="recorder_state_complete">Enregistrement vidéo complète.</string>
	<string name="recorder_state_min_video_crossed">Enregistrement&#8230;</string>
	<string name="recorder_state_press_to_record">Appuyez pour enregistrer&#8230;</string>
	<string name="next">Suivant</string>
	<string name="finish">Terminer</string>
	<string name="confirm">Confirmer</string>
	<string name="processing">Traitement en cours&#8230;</string>
	<string name="alert">Alert</string>
	<string name="discard_video_msg">Voulez-vous annuler l\'enregistrement?</string>
	<string name="video_saved_path">Your video is saved at</string>
	<string name="action_send">Envoyer</string>
	<string name="prompt_message">Message</string>
	<string name="video_uploaded">Votre vidéo a été upload !</string>
	<string name="error_video_uploaded">Erreur ! Votre vidéo n\'a été upload !</string>
	<string name="video">Video</string>
	<string name="audio">Audio</string>
	<string name="text">Text</string>
	<string name="logging">Logging</string>
	<string name="logging_normal">Normal</string>
	<string name="logging_verbose">Verbose</string>
	<string name="retry">Retry</string>
	<string name="error_connect">Impossible de se connecter</string>
	<string name="recreation">Récréation</string>
	<string name="connexion_en_cours">Connexion en cours&#8230;</string>
	<string name="deconnexion_en_cours">Déconnexion&#8230;</string>
	<string name="sms_verification_solution">Pour résoudre le problème, c\'est très facile, suivez les étapes suivantes :\n
											- Inscrivez vous sur https://www.digits.com/signin et confirmer votre compte.\n
											- Puis retourner sur DzBac et réessayez la vérification.\n\n
											Pour toute question, contactez nous sur team.dzbac@gmail.com</string>
	<string name="filtre_post">Recherche au niveau des posts</string>
	<string name="filtre_user">Recherche au niveau des utilisateurs</string>
	<string name="sms_verification_error">La vérification SMS ne fonctionne pas ?</string>
	<string name="message_welcome">Bienvenue dans la cour de récréation de DzBac</string>
	<plurals name="message_participants">
		<item quantity="one">Il y a %d participant</item>
		<item quantity="other">Il y a %d participants</item>
	</plurals>
	<string name="message_user_joined">%s a rejoint la cour</string>
	<string name="message_user_left">%s a quitté(e) la cour</string>
	<string name="user_action_typing">est entrain d\'écrire&#8230;</string>
	<string name="key_backup_google">AEdPqrEAAAAIox2zzp7IwAiFQjYhz32lj_lfzVC16fD0sqXnJw</string>
	<string name="ad_unit_native">8eeee9cbf68b4cc4912d2150d4f2a683</string>
	<string name="banner_ad_unit_id_show_post">ca-app-pub-3431238505773199/3549571866</string>
	<string name="banner_ad_unit_id_show_image">ca-app-pub-3431238505773199/9794566260</string>
	<string name="intersial_ad_unit_id_show_image">ca-app-pub-3431238505773199/9199152663</string>
    <string name="mcam_portrait_warning">Il est recommandé d\'enregistrer en mode paysage. Continuer en portrait ?</string>
	<string name="mes_amis">Mes amis</string>
	<string name="no_contact">Pas de contact utilisant DzBac pour le moment, invite tes amis ! :D</string>
	<string name="sms_verification_1"><![CDATA[Dans le but de lutter contre les spammeurs, nous vérifions que vous n\'êtes pas un <b>robot</b>.<br/>
									Cela permettra aussi à vos amis qui vous ont enregistré dans leur carnet d\'adresses de vous trouver sur DzBac]]></string>
	<string name="verification">Vérification</string>
	<string name="filiere_selectionne">Filière(s) sélectionnée(s) %s</string>
	<string name="all_filiere">Toutes les filières</string>
	<string name="filire">Filière(s)</string>
	<string name="select_filiere">Sélectionne les filières</string>
	<string name="les_posts">Posts</string>
	<string name="filiere_pref_summary">Choisissez les posts des filières que vous voulez voir</string>
	<string name="native_main_image">native_main_image</string>
	<string name="native_privacy_information_icon_image">Privacy Information Icon image</string>
	<string name="audio_info">Sélectionne un fichier audio</string>
	<string name="error_inconnu_google">Une erreur s\'est produite, réessayez avec l\'inscription par email</string>
	<string name="tout_telecharger">Télécharger l\'album</string>
	<string name="album">Album</string>
	<string name="telechargement_album_termine">Téléchargement de l\'album terminé, les images sont dans le dossier DzBac</string>
	<string name="telechargement_album_en_cours">Téléchargement de l\'album en cours&#8230;</string>
	<string name="top_post">Top Post</string>
	<string name="error_premium">Pour continuer à utiliser DzBac, vous devez être un membre premium</string>
	<string name="pret_a_obtenir">Tu veux aller en médecine ? DzBac va t\'aider à réaliser ton rêve !</string>
	<string name="fichier_upload">Fichier upload avec succès</string>
	<string name="audio_upload">Audio upload avec succès</string>
	<string name="dzbac_reglement_info">En postant, tu admets avoir lu le réglement de DzBac</string>
	<string name="error_wifi">Une connexion WIFI est nécessaire pour faire un appel</string>
	<string name="error_version_ancienne">Votre version d\'Android est trop ancienne pour pouvoir lire les audios/vidéos</string>
	<string name="wifi">WIFI</string>
	<string name="premium_0">Vous n\'avez aucun abonnement premium</string>
	<string name="premium_1">Vous avez un abonnement premium d\'un mois</string>
	<string name="premium_2">Vous avez un abonnement premium de 6 mois</string>
	<string name="premium_3">Vous avez un abonnement premium d\'un ans</string>
	<string name="premium_4">Vous avez un abonnement premium d\'une semaine</string>
	<string name="premium_5">Vous avez un abonnement premium de trois mois</string>
	<string name="premium_6">Vous avez un abonnement premium spécial de trois mois</string>
	<string name="camera_hide">Votre interlocuteur ne peut plus vous voir</string>
	<string name="camera_enabled">Votre interlocteur peut à nouveau vous voir</string>
	<string name="compte_prenium">Compte Premium</string>
	<string name="error_prenimum">Cette fonctionnalité est adressée aux utilisateurs premium de DzBac, aller dans \'Compte Premium\' pour mieux comprendre</string>
	<string name="error_prenimum_message">L\'envoie des messages est réservé aux utilisateurs premium de DzBac, aller dans \'Compte Premium\' pour mieux comprendre</string>
	<string name="filiere">Filière(s)</string>
	<string name="followers">Followers</string>
	<string name="call_video">Appel vidéo</string>
    <string name="save_image">Sauvgarder l\'image</string>
	<string name="appel">Appels</string>
	<string name="multiple_account">Erreur !</string>
	<string name="error_multile_account">Oups ! DzBac a détecté l\'utilisation du même compte sur plusieurs mobiles ou tablettes !</string>
	<string name="trier">Trier par</string>
	<string name="date_inscription">Date d\'inscription</string>
	<string name="lancer_recherche">Lancer la recherche</string>
	<string name="patienter">Patientez&#8230;</string>
	<string name="version_outdated">Cette version de l\'application s\'est expirée, veuillez faire la mise à jour</string>
	<string name="block_user">Bloquer l\'utilisateur pour ne plus vous contacter</string>
	<string name="bannir_utilisateur">Bannir l\'utilisateur</string>
	<string name="ban_user">Vous avez été banni de DzBac pour non respect du règlement, au revoir !</string>
	<string name="ban_user_details">Vous avez été banni de DzBac pour non respect du règlement, pour plus d\'info contactez team.dzbac@gmail.com</string>
	<string name="bannissment">Bannissement</string>
	<string name="classement">Classement</string>
	<string name="challenge">Challenge</string>
	<string name="permission_camera">DzBac a besoin de cette permission, pour que vous puissiez enregistrer des vidéos</string>
	<string name="permission_file">DzBac a besoin de cette permission, pour que vous puissiez uploader des fichiers</string>
	<string name="permission_photo">DzBac a besoin de cette permission, pour que vous puissiez charger des photos</string>
	<string name="permission_photo_enregistrement">DzBac a besoin de cette permission, pour que vous puissiez télécharger des photos</string>
    <string name="supprimer_fichier">Voulez vous supprimer le fichier ?</string>
    <string name="alerte">Alerte</string>
    <string name="commentaires">Commentaires</string>
    <string name="posts_publie">Posts publiés</string>
    <string name="plus_menu">Plus menu</string>
	<string name="banissement">Bannissement</string>
	<string name="banissement_warn">Être vous sûr(e) de bannir cet utilisateur ?</string>
	<string name="bloquer">Bloquer</string>
     <string name="btn_inscription">S\'INSCRIRE</string>
     <string name="btn_connexion">SE CONNECTER</string>
     <string name="localiser">Localisez !</string>
	 <string name="email">E-mail</string>
	 <string name="inscription">M\'inscrire</string>
	 <string name="mot_de_passe">Mot de passe</string>
	 <string name="confirme_mdp">Confirmer le mot de passe</string>
	 <string name="matiere">Matière</string>
	 <string name="type">Type</string>
	 <string name="nom_et_prenom">Nom et prénom</string>
     <string name="titre">Ton titre</string>
    <string name="bloquer_image">Bloquer l\'image</string>
    <string name="quitter">Quitter</string>
     <string name="description">Exprime toi !</string>
    <string name="sur_facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google_plus">Google Plus</string>
    <string name="google_play">Laissez un commentaire sur le Google Play</string>
    <string name="Son">Son</string>
    <string name="son_info">Son pour les notifications</string>
	<string name="notification_info">Recevoir chaque jour une notification qui vous affiche le meilleur post de la journée</string>
	<string name="follow_notification_info">Recevoir une notification à chaque fois qu\'un utilisateur s\'abonne à vous</string>
    <string name="vibreur">Vibreur</string>
    <string name="vibreur_info">Vibreur pour les notifications</string>
    <string name="pref_notification">Notifications</string>
	 <string name="menu_send_message">Envoyer un message</string>
	 <string name="menu_edition_profile">Éditer votre profil</string>
     <string name="filtre_plus_recente">Les plus récentes</string>
	 <string name="filtre_a_proximite">À proximité de moi</string>
	 <string name="filtre_selon_endroit">Selon un endroit</string>
	 <string name="filtre_plus_aime_actuellement">Les plus aimées actuellement</string>
	 <string name="filtre_plus_aime_generale">Les plus aimées en général</string>
	 <string name="filtre_plus_vus_actuellement">Les plus vues actuellement</string>
	 <string name="filtre_plus_vus_generale">Les plus vues en général</string>
     <string name="toggle_button">Toggle Button</string>
     <string name="oui">Oui</string>
	 <string name="non">Non</string>
	<string name="format">Format</string>
</resources>