<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >
      
    
    <item
        android:id="@+id/menu_save_image"
        android:title="@string/save_image"
        android:icon="@drawable/ic_save_white_24dp"
        app:showAsAction="always"
      />

    <item
        android:id="@+id/menu_save_all_images"
        android:title="@string/save_image"
        android:icon="@drawable/ic_file_download_white_24dp"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menu_image_operation"
        android:title="@string/bloquer_image"
        app:showAsAction="never"
        />
    
    <item
        android:id="@+id/menu_cancel"
        android:title="@string/quitter"
        app:showAsAction="never"
      />
    
    

</menu>
