<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <TextView
        style="@style/AppTheme.TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filiere"/>

    <com.greenfrvr.hashtagview.HashtagView
        android:id="@+id/hashtags5"
        style="@style/HashtagView"
        app:rowGravity="center"
        app:rowMode="stretch"
        app:tagBackground="@drawable/item_bg_1"
        app:tagDrawablePadding="4dp"
        android:layout_margin="10dp"
        app:tagForeground="@drawable/flat_button_light"
        app:tagPaddingBottom="@dimen/padding_vertical"
        app:tagPaddingLeft="@dimen/padding_horizontal"
        app:tagPaddingRight="@dimen/padding_horizontal"
        app:tagPaddingTop="@dimen/padding_vertical"
        android:visibility="gone"
        app:tagTextColor="#E5E5E5" />

    <com.beardedhen.androidbootstrap.FontAwesomeText
        android:id="@+id/tag_item_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        fontawesometext:fa_icon="fa-pencil-square"
        android:layout_margin="10dp"
        bootstrapbutton:bb_type="primary"
        android:textColor="@color/vert_icon_app"
        android:textSize="35sp"
        />
    
    <TextView
       style="@style/AppTheme.TitleText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/type"/>
    
    <Spinner
        android:id="@+id/spinner_type_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/filtre_type"
         />
    
    <TextView
       style="@style/AppTheme.TitleText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/matiere"/>
    
    <Spinner
        android:id="@+id/spinner_subject_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/filtre_subject"
         />

    <TextView
        style="@style/AppTheme.TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/format"/>

    <Spinner
        android:id="@+id/spinner_format_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/filtre_format"
        />

    <TextView
        style="@style/AppTheme.TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trier"/>

    <Spinner
        android:id="@+id/spinner_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/filtre_order"
        />
    
	 
   <RelativeLayout 
       android:layout_width="match_parent"
	   android:layout_height="wrap_content"
	   android:visibility="gone"
	   android:orientation="horizontal">

    <TextView
        style="@style/AppTheme.TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtre_plus_recente" />

    <ToggleButton
        android:id="@+id/toggle_filtre_plus_recente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textOn="@string/oui"
        android:textOff="@string/non"
        android:checked="true"
        android:text="@string/toggle_button" />
       
   </RelativeLayout>
   
   <RelativeLayout  
       android:layout_width="match_parent"
	   android:layout_height="wrap_content"
	   android:visibility="gone"
	   android:orientation="horizontal">

    <TextView
        style="@style/AppTheme.TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtre_a_proximite" />

    <ToggleButton
        android:id="@+id/toggle_filtre_a_proximite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textOn="@string/oui"
        android:textOff="@string/non"
        android:text="@string/toggle_button" />
       
   </RelativeLayout > 
   
   <RelativeLayout  
       android:layout_width="match_parent"
	   android:layout_height="wrap_content"
	   android:visibility="gone"
	   android:orientation="horizontal">

    <TextView
        style="@style/AppTheme.TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtre_selon_endroit" />

    <ToggleButton
        android:id="@+id/toggle_filtre_selon_endroit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textOn="@string/oui"
        android:textOff="@string/non"
        android:text="@string/toggle_button" />
       
   </RelativeLayout > 
   
   <com.beardedhen.androidbootstrap.BootstrapButton
    android:id="@+id/btn_localisation_selon_endroit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:visibility="gone"
    android:text="@string/localiser"
    android:layout_gravity="center_horizontal"
    bootstrapbutton:bb_icon_left="fa-map-marker"
    bootstrapbutton:bb_type="primary"
    bootstrapbutton:bb_roundedCorners="true"
	/>
   
   
     <RelativeLayout  
       android:layout_width="match_parent"
	   android:layout_height="wrap_content"
	   android:visibility="gone"
	   android:orientation="horizontal">

    <TextView
        style="@style/AppTheme.TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtre_plus_aime_actuellement" />

    <ToggleButton
        android:id="@+id/toggle_filtre_plus_aime_actuellement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textOn="@string/oui"
        android:textOff="@string/non"
        android:text="@string/toggle_button" />
       
   </RelativeLayout > 
   
      <RelativeLayout  
       android:layout_width="match_parent"
	   android:layout_height="wrap_content"
	   android:visibility="gone"
	   android:orientation="horizontal">

    <TextView
        style="@style/AppTheme.TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtre_plus_aime_generale" />

    <ToggleButton
        android:id="@+id/toggle_filtre_plus_aime_generale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textOn="@string/oui"
        android:textOff="@string/non"
        android:text="@string/toggle_button" />
       
   </RelativeLayout > 
   
       <RelativeLayout  
       android:layout_width="match_parent"
	   android:layout_height="wrap_content"
	   android:visibility="gone"
	   android:orientation="horizontal">

    <TextView
        style="@style/AppTheme.TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtre_plus_vus_actuellement" />

    <ToggleButton
        android:id="@+id/toggle_filtre_plus_vus_actuellement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textOn="@string/oui"
        android:textOff="@string/non"
        android:text="@string/toggle_button" />
       
   </RelativeLayout > 
   
        <RelativeLayout  
       android:layout_width="match_parent"
	   android:layout_height="wrap_content"
	   android:visibility="gone"
	   android:orientation="horizontal">

    <TextView
        style="@style/AppTheme.TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtre_plus_vus_generale" />

    <ToggleButton
        android:id="@+id/toggle_filtre_plus_vus_generale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textOn="@string/oui"
        android:textOff="@string/non"
        android:text="@string/toggle_button" />
       
   </RelativeLayout > 

</LinearLayout>
