<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >
    

    
    <item
        android:id="@+id/menu_edit_account"
        android:title="@string/menu_edition_profile"
        android:icon="@drawable/ic_edit_white_24dp"
        app:showAsAction="always"
      />

    <item
        android:id="@+id/menu_bann_user"
        android:title="@string/block_user"
        android:icon="@drawable/ic_cancel_white_24dp"
        android:visible="false"
        app:showAsAction="always"
        />


    <item
        android:id="@+id/menu_block_user"
        android:title="@string/block_user"
        android:icon="@drawable/ic_block_white_24dp"
        android:visible="false"
        app:showAsAction="always"
        />


    <item
        android:id="@+id/menu_send_message"
        android:title="@string/menu_send_message"
        android:icon="@drawable/ic_message_white_24dp"
        android:visible="false"
        app:actionViewClass="android.widget.ImageView"
        app:showAsAction="always"
        />

</menu>
